✨ feat:  add computed values

--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
 		<div id="app" class="app">
 			<h1>{{ restaurantName }}</h1>
 			<p class="description">
-				Bienvenue dans notre café {{ restaurantName }} ! Nous sommes réputés
-				pour notre pain et nos merveilleuses pâtisseries. Faites vous plaisir
-				dès le matin ou avec un goûter réconfortant. Mais attention, vous verrez
-				qu'il est difficile de s'arrêter.
+				Bienvenue dans notre café {{ restaurantName }}! Nous sommes réputés pour
+				notre pain et nos merveilleuses pâtisseries. Faites vous plaisir dès le
+				matin ou avec un goûter réconfortant. Mais attention, vous verrez qu'il
+				est difficile de s'arrêter.
 			</p>
+
+			<h2>Contactez nous</h2>
+			<p>Adresse : {{ Adresse }}</p>
+			<p>Téléphone : {{ Telephone }}</p>
+			<p>Email : {{ Email }}</p>
+			<p>Horaires :</p>
+			<ul>
+        <li v-for="horaire in horaires">
+          {{ horaire }}
+        </li>
+			</ul>
+
 			<footer class="footer">
-				<p>Copyright {{ restaurantName }} 2019</p>
+				<p>{{ copyright }}</p>
 			</footer>
 		</div>
 
@@ -26,8 +38,19 @@
 			const app = new Vue({
 				el: "#app",
 				data: {
-					restaurantName: "La belle vue"
-				}
+					restaurantName: "Café avec vue",
+          Adresse : "18 avenue du Beurre, Paris, France",
+          Telephone : "01 88 88 88 88",
+          Email : "hello@cafewithavue.bakery",
+          horaires : ["L-V: 06:00 à 16:00", "Samedi: 07:00 à 14:00", "Dimanche: 07:00 à 12:00"],
+        },
+        computed: {
+copyright() {
+  const restaurantName = this.restaurantName || '';
+  const currentYear = new Date().getFullYear();
+  return `Copyright © ${restaurantName} ${currentYear}`;
+},
+        }
 			})
 		</script>
 	</body>
